Fixing video on mobile

--- a/assets/css/templatemo-breezed.css
+++ b/assets/css/templatemo-breezed.css
@@ -323,26 +323,27 @@ a.text-button-icon:hover i {
   overflow-y: auto;
   position:relative;*/
 
-  /*height: 100vh;*/
   width: 100%;
   object-fit: cover; // use "cover" to avoid distortion
   position: absolute; 
-     
 
 }
-
-/* Chrome only: */
-@media all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm){
-    #demoVideo{
-      /*max-width:400px;*/
-      /*border: 2px solid red;*/
-
-    }
-}
-
 .modal-body{
   width:100% !important;
   overflow-y: auto;
+}
+
+@media (max-width: 700px) {
+  
+  .modal-dialog{
+    max-width: 96% ;
+  }
+  .grid{
+    min-height: 430px !important;
+  }
+  .all{
+    min-height: 430px !important;
+  }
 }
 
 
